--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .profilePicture{
 	width: 10%;
 	height: 50%;
+	/*border-radius: 50px;*/
 }
 header {
 	font-family: "Time New Roman";
@@ -12,5 +13,11 @@ body {
 
 h1 {
     text-align: center;
-    border-width: 30%;
+}
+
+body{
+	background-image: url("img/surf.jpg"); 
+	/*width: 200px;
+	height: 300px;*/
+	background-size: cover;
 }
