parcours pro et études

--- a/style_centres_d_interet.css
+++ b/style_centres_d_interet.css
@@ -1,9 +1,12 @@
 h1 {
     text-align: center;
+    	color: white;
 }
 
 h2 {
     text-align: center;
+    	color: white;
+
 }
 body{
 	background-image: url("img/surf.jpg"); 
