--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 h1 {
+	color: white;
     text-align: center;
 }
 
@@ -20,4 +21,27 @@ body{
 	/*width: 200px;
 	height: 300px;*/
 	background-size: cover;
+}
+
+textarea{
+	color: white;
+	background-color: transparent;
+	margin-left: 25%;
+}
+
+
+h2{
+	color: white;
+    text-align: center;
+}
+
+h3{
+	color: white;
+    text-align: center;
+}
+
+textarea{
+	color: white;
+	background-color: transparent;
+	margin-left: 25%;
 }
